--- a/ollama_model2.ipynb
+++ b/ollama_model2.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#this llm or model is being design using langchain and ollama framework to run the llm locally."
+    "#this llm or model is being design using langchain and ollama framework to run the llm locally but it takes input from the user."
    ]
   },
   {
@@ -57,53 +57,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "433cd0af-6a10-48f9-828b-9aa34a09d173",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Regarding what topic you are eager to ask now:  Do the job of engineers in danger, due to the evolution of generative ai, explain.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "the whole response is: \n",
-      " content='Kabaddi is a popular contact team sport that originated in ancient India and has since spread to become a widely played sport across the globe, particularly in Asia. The name \"kabaddi\" comes from the Hindi word \"kabhaddi,\" which means \"hold on\" or \"catch up.\"\\n\\nHere\\'s a brief overview of the game:\\n\\n**Objective:**\\nThe objective of kabaddi is for one team to score points by tagging players from the opposing team and returning to their own side without being caught.\\n\\n**Gameplay:**\\n\\n* The game is played between two teams, each consisting of seven players.\\n* One player from the attacking team sends a raider (similar to a point-scorer in other sports) to the opposite team\\'s court.\\n* The raider must touch the floor and hold their breath while chanting \"kabaddi\" to indicate that they are taking possession of an opponent.\\n* The raider can tag multiple players from the opposing team, but each time they do so, they lose some air (time) to breathe. If the raider loses all their remaining air before tagging all the opponents and returning to their own side, the attacking team scores points.\\n* When a raider is tagged by an opponent while holding breath, they must freeze in place until they catch their breath.\\n* Players can also score points through blocks (successful defense) or by making a tackle on the opponent, causing them to lose possession.\\n\\n**Types of kabaddi:**\\nThere are two main formats of kabaddi:\\n\\n1. **Revised Kabaddi**: Also known as Indian Kabaddi, this format has undergone significant rule changes to make the game more exciting and safer for players.\\n2. **Pro Kabaddi League (PKL)**: A professional kabaddi league that features international players competing against each other in a tournament-like format.\\n\\n**Physical and mental benefits:**\\nKabaddi is an excellent team sport that offers numerous physical and mental benefits, including:\\n\\n* Improved cardiovascular fitness\\n* Enhanced coordination and agility\\n* Stronger upper body strength\\n* Better decision-making skills\\n* Reduced stress and improved overall well-being\\n\\nOverall, kabaddi is a thrilling and entertaining sport that requires skill, strategy, and teamwork. If you\\'re interested in learning more about the game or want to try it out, I recommend checking online resources or local clubs for opportunities to play!' additional_kwargs={} response_metadata={'model': 'llama3.2:3b', 'created_at': '2025-06-20T10:22:46.2019505Z', 'done': True, 'done_reason': 'stop', 'total_duration': 49741392300, 'load_duration': 7852263100, 'prompt_eval_count': 34, 'prompt_eval_duration': 3594254800, 'eval_count': 492, 'eval_duration': 38261324400, 'model_name': 'llama3.2:3b'} id='run--94ab876d-5f28-4cfd-861d-b521ca0261ac-0' usage_metadata={'input_tokens': 34, 'output_tokens': 492, 'total_tokens': 526} \n",
+      " content=\"The increasing presence and capabilities of Generative AI (GANs) pose significant challenges to various professions, including engineering, potentially putting some jobs at risk or changing the nature of others. Here are a few aspects where job changes or risks can be observed:\\n\\n1. **Design and Prototyping**: With advancements in generative design tools like those using GANs or Generative adversarial networks (GAN), AI-assisted designs become increasingly realistic, capable to replicate human style as well. This can make traditional human-designed prototypes less sought after for certain projects, potentially reducing the demand for some designers.\\n\\n2. **Testing and Validation**: Automated testing frameworks utilizing machine learning and natural language processing could enable quicker identification of software or hardware defects by simulating all possible states of a given program, inputting the results into code that will check those predicted values against recorded data on known bugs. The need for extensive human-based manual validation in these environments could gradually dwindle.\\n\\n3. **Code Completion**: Many newer code completion tools, especially those that use advanced NLP and AI algorithms such as transformers, significantly simplify the process of coding, offering many of the capabilities previously done by individual engineers within a team to other team members and sometimes outside developers for integration with legacy software or platforms designed several years back.\\n\\n4. **Technical Documentation**: Many current documentation tools have adopted natural language processing (NLP), similar to GANs and AI algorithms. This could enable automated summarization of text documents, translation of foreign languages into English based on patterns learned from large volumes of text data provided by companies' content management systems. \\n\\nHowever, it's worth noting that advancements in generative AI also offer potential solutions and opportunities:\\n\\n- **Increasing efficiency**: By automating certain tasks, engineers can focus on higher-value tasks requiring human expertise.\\n- **Enhancing design capabilities**: Generative AI tools can augment the creativity of designers, allowing for faster iteration and exploration of ideas.\\n\\nMoreover, new areas will likely emerge due to GANs' capabilities in image processing and 3D rendering:\\n\\n- **Design Synthesis**: Generative models could enable engineers to create fully functional prototypes with reduced data usage compared to more traditional methods.\\n  \\nThese are just a few areas where generative AI is having significant effects. As technology evolves, we're likely to see the field develop new standards that require workers' versatility and creative problem-solving capabilities.\" additional_kwargs={} response_metadata={'model': 'llama3.2:3b', 'created_at': '2025-06-20T10:46:39.5424619Z', 'done': True, 'done_reason': 'stop', 'total_duration': 48301561000, 'load_duration': 7995684900, 'prompt_eval_count': 44, 'prompt_eval_duration': 3656366200, 'eval_count': 479, 'eval_duration': 36611934400, 'model_name': 'llama3.2:3b'} id='run--fba55ca5-a26b-4088-bbc5-22608a8d3940-0' usage_metadata={'input_tokens': 44, 'output_tokens': 479, 'total_tokens': 523} \n",
       "\n",
       "the content part: \n",
-      " Kabaddi is a popular contact team sport that originated in ancient India and has since spread to become a widely played sport across the globe, particularly in Asia. The name \"kabaddi\" comes from the Hindi word \"kabhaddi,\" which means \"hold on\" or \"catch up.\"\n",
+      " The increasing presence and capabilities of Generative AI (GANs) pose significant challenges to various professions, including engineering, potentially putting some jobs at risk or changing the nature of others. Here are a few aspects where job changes or risks can be observed:\n",
       "\n",
-      "Here's a brief overview of the game:\n",
+      "1. **Design and Prototyping**: With advancements in generative design tools like those using GANs or Generative adversarial networks (GAN), AI-assisted designs become increasingly realistic, capable to replicate human style as well. This can make traditional human-designed prototypes less sought after for certain projects, potentially reducing the demand for some designers.\n",
       "\n",
-      "**Objective:**\n",
-      "The objective of kabaddi is for one team to score points by tagging players from the opposing team and returning to their own side without being caught.\n",
+      "2. **Testing and Validation**: Automated testing frameworks utilizing machine learning and natural language processing could enable quicker identification of software or hardware defects by simulating all possible states of a given program, inputting the results into code that will check those predicted values against recorded data on known bugs. The need for extensive human-based manual validation in these environments could gradually dwindle.\n",
       "\n",
-      "**Gameplay:**\n",
+      "3. **Code Completion**: Many newer code completion tools, especially those that use advanced NLP and AI algorithms such as transformers, significantly simplify the process of coding, offering many of the capabilities previously done by individual engineers within a team to other team members and sometimes outside developers for integration with legacy software or platforms designed several years back.\n",
       "\n",
-      "* The game is played between two teams, each consisting of seven players.\n",
-      "* One player from the attacking team sends a raider (similar to a point-scorer in other sports) to the opposite team's court.\n",
-      "* The raider must touch the floor and hold their breath while chanting \"kabaddi\" to indicate that they are taking possession of an opponent.\n",
-      "* The raider can tag multiple players from the opposing team, but each time they do so, they lose some air (time) to breathe. If the raider loses all their remaining air before tagging all the opponents and returning to their own side, the attacking team scores points.\n",
-      "* When a raider is tagged by an opponent while holding breath, they must freeze in place until they catch their breath.\n",
-      "* Players can also score points through blocks (successful defense) or by making a tackle on the opponent, causing them to lose possession.\n",
+      "4. **Technical Documentation**: Many current documentation tools have adopted natural language processing (NLP), similar to GANs and AI algorithms. This could enable automated summarization of text documents, translation of foreign languages into English based on patterns learned from large volumes of text data provided by companies' content management systems. \n",
       "\n",
-      "**Types of kabaddi:**\n",
-      "There are two main formats of kabaddi:\n",
+      "However, it's worth noting that advancements in generative AI also offer potential solutions and opportunities:\n",
       "\n",
-      "1. **Revised Kabaddi**: Also known as Indian Kabaddi, this format has undergone significant rule changes to make the game more exciting and safer for players.\n",
-      "2. **Pro Kabaddi League (PKL)**: A professional kabaddi league that features international players competing against each other in a tournament-like format.\n",
+      "- **Increasing efficiency**: By automating certain tasks, engineers can focus on higher-value tasks requiring human expertise.\n",
+      "- **Enhancing design capabilities**: Generative AI tools can augment the creativity of designers, allowing for faster iteration and exploration of ideas.\n",
       "\n",
-      "**Physical and mental benefits:**\n",
-      "Kabaddi is an excellent team sport that offers numerous physical and mental benefits, including:\n",
+      "Moreover, new areas will likely emerge due to GANs' capabilities in image processing and 3D rendering:\n",
       "\n",
-      "* Improved cardiovascular fitness\n",
-      "* Enhanced coordination and agility\n",
-      "* Stronger upper body strength\n",
-      "* Better decision-making skills\n",
-      "* Reduced stress and improved overall well-being\n",
+      "- **Design Synthesis**: Generative models could enable engineers to create fully functional prototypes with reduced data usage compared to more traditional methods.\n",
+      "  \n",
+      "These are just a few areas where generative AI is having significant effects. As technology evolves, we're likely to see the field develop new standards that require workers' versatility and creative problem-solving capabilities. \n",
       "\n",
-      "Overall, kabaddi is a thrilling and entertaining sport that requires skill, strategy, and teamwork. If you're interested in learning more about the game or want to try it out, I recommend checking online resources or local clubs for opportunities to play! \n",
-      "\n",
-      "the metadata part \n",
-      " {'model': 'llama3.2:3b', 'created_at': '2025-06-20T10:22:46.2019505Z', 'done': True, 'done_reason': 'stop', 'total_duration': 49741392300, 'load_duration': 7852263100, 'prompt_eval_count': 34, 'prompt_eval_duration': 3594254800, 'eval_count': 492, 'eval_duration': 38261324400, 'model_name': 'llama3.2:3b'} \n",
+      "the metadata part: \n",
+      " {'model': 'llama3.2:3b', 'created_at': '2025-06-20T10:46:39.5424619Z', 'done': True, 'done_reason': 'stop', 'total_duration': 48301561000, 'load_duration': 7995684900, 'prompt_eval_count': 44, 'prompt_eval_duration': 3656366200, 'eval_count': 479, 'eval_duration': 36611934400, 'model_name': 'llama3.2:3b'} \n",
       "\n"
      ]
     },
@@ -113,7 +108,7 @@
        "'token_usage, model, model_version, and other metadata,\\nollama_parameters: A dictionary of the parameters (like temperature, max_tokens, top_k, top_p, seed, etc.), and\\nfinish_reason: Why the model stopped generating (e.g., \"stop\" for natural end, \"length\" for hitting max_tokens).'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,16 +131,19 @@
     "\n",
     "model = ChatOllama(\n",
     "    model = \"llama3.2:3b\",\n",
-    "    base_url = \"http://localhost:11434\",\n",
     "    temperature = 1.5,\n",
-    "    max_tokens = 1000\n",
+    "    max_tokens = 2048\n",
     ")\n",
     "\n",
     "\"\"\"creates an instance to connect with the required model of the ollama and also set the other variables\n",
     "like temperature and max_tokens for the randomness(ranging from 0 to 2) and maximum number output tokens\n",
     "respectively, 0 for more repetitive and deterministic while 2 for most random and creative.\"\"\"\n",
     "\n",
-    "result = model.invoke(\"What is the game of kabbadi.\")\n",
+    "text = input(\"Regarding what topic you are eager to ask now: \")\n",
+    "\n",
+    "\"\"\"user interface to ask question.\"\"\"\n",
+    "\n",
+    "result = model.invoke(text)\n",
     "\n",
     "\"\"\"invoke method is used to send the prompt to the model and get the response back and stored in result.\"\"\"\n",
     "\n",
@@ -155,13 +153,20 @@
     "\n",
     "print(\"the content part: \\n\", result.content, \"\\n\")\n",
     "\n",
-    "print(\"the metadata part \\n\", result.response_metadata,\"\\n\")\n",
+    "print(\"the metadata part: \\n\", result.response_metadata,\"\\n\")\n",
     "\n",
     "\"\"\"token_usage, model, model_version, and other metadata,\n",
     "ollama_parameters: A dictionary of the parameters (like temperature, max_tokens, top_k, top_p, seed, etc.), and\n",
-    "finish_reason: Why the model stopped generating (e.g., \"stop\" for natural end, \"length\" for hitting max_tokens).\"\"\"\n",
-    "\n"
+    "finish_reason: Why the model stopped generating (e.g., \"stop\" for natural end, \"length\" for hitting max_tokens).\"\"\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22a10b18-b62f-4ef0-b1b0-723653e67bb9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
